# ROS2_CICD

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.ci  README.md  X_scaled.npy  anomaly_model.pkl  anomaly_model_iforest.pkl  anomaly_result_demo1.txt  anomaly_result_log_demo1.csv  check_feature_dist.py  check_input_drift.py  cleanub_training_data.sh  cloud_metrics.csv  confirm_threshold.py  entrypoint.sh  fix_csv_format.py  flag_anomalies.py  generate_controllers.sh  generate_err_scores.py  generate_training_data.sh  inspect_columns.py  inspect_runtime_metrics.py  plot_metrics.py  prepare_dataset.py  ros_metrics_cleaned.csv  ros_metrics_demo1.csv  ros_metrics_demo2.csv  setup_controllers.sh  simulation_log_demo1.csv  simulation_log_demo2.csv  summarize_simulations.py  threshold_vals.py  train_all_models.py  train_autoencoder.py  train_cnnlstm.py  train_iforest_scaled.py  train_model.py  validate_model.py  (+1 more)
ci/: compare_models.py  save_inference_scores.py
dashboard/: app.py
data_store/: features.csv  merge_csv.py  train_all_models.py
data_training_full/: data_insights.py  merge.py
datasets/: borg_tru_small.csv
install/: setup.sh
log/: latest_build
ros2_ws/: cloud_metrics.csv  ros_metrics_unknown.csv  simulation_log_unknown.csv
ros2_ws/install/cpu_hog_controller/share/cpu_hog_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/cpu_hog_controller/share/cpu_hog_controller/cmake/: cpu_hog_controllerConfig.cmake
ros2_ws/src/cpu_hog_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/cpu_hog_controller/cpu_hog_controller/: hog.py
ros2_ws/src/sensor_dropout_controller/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/sensor_dropout_controller/sensor_dropout_controller/: sensor_dropout.py
trained_models/: ae_threshold.pkl  anomaly_model.pkl  anomaly_model_ae.keras  anomaly_model_ae.pkl  anomaly_model_cnnlstm.keras  anomaly_model_cnnlstm.pkl  anomaly_model_iforest.pkl  cnn_lstm_threshold.pkl  scaler.pkl
trained_models_new/: autoencoder_model.keras  autoencoder_threshold.pkl  cnn_lstm_model.keras  (+4 more)
(+90 files in other folders)
