<?xml version="1.0"?>
<package format="3">
  <name>cpu_hog_controller</name>
  <version>0.0.1</version>
  <description>Python node to simulate CPU stress on TurtleBot</description>
  <maintainer email="ec24136@qmul.ac.uk">ec24136</maintainer>
  <license>MIT</license>

  <!-- This is the correct buildtool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>psutil</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
