<?xml version="1.0"?>
<package format="3">
  <name>cpu_hog_controller</name>
  <version>0.1.0</version>
  <description>CPU load generator controller for Webots TurtleBot3</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_type>ament_python</build_type>
</package>
