<?xml version="1.0"?>
<package format="3">
  <name>cpu_hog_controller</name>
  <version>0.0.1</version>
  <description>Python node to simulate CPU stress on TurtleBot</description>
  <maintainer email="ec24136@qmul.ac.uk">ec24136</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>psutil</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <!-- no build_type needed -->
  </export>
</package>
